--- a/css/main.css
+++ b/css/main.css
@@ -11,10 +11,22 @@
 }
 
 
-.imagem-carrosel {
+.imagem-carrosel-1 {
     object-fit: cover;
-    object-position: 0 25%;
-    height: 400px;
+    object-position: 0 63%;
+    height: 350px;
+}
+
+.imagem-carrosel-2 {
+    object-fit: cover;
+    object-position: 0 40%;
+    height: 350px;
+}
+
+.imagem-carrosel-3 {
+    object-fit: cover;
+    object-position: 0 20%;
+    height: 350px;
 }
 
 .suspiromenu {
@@ -74,6 +86,6 @@
 }
 
 .logo {
-    width: 10rem;
+    width: 8rem;
     position: relative;
 }
